# agentocy_test

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
db/: chroma.sqlite3
src/agentocy_test/: crew.py  main.py
src/agentocy_test/config/: tasks.yaml
